# ai-test-procedure-generator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: ci.yml  deploy.yml  deploy_azure.yml
app/: main.py
app/ai/: generator.py  prompts.py  providers.py
app/core/: config.py  exceptions.py  models.py
app/render/: pdf_renderer.py
app/rules/: constraints.py  validation.py
app/templates/: custom.yaml
app/utils/: currency.py  logging.py
app/web/: api.py  streamlit_app.py
app/web/components/: metrics_display.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
tests/integration/: test_smoke.py
